force-app/src/objects/c2g__PrepaidExpensesBatch__c.object
<CustomObject>
    <customHelpPage>c2g__prepaidexpenses</customHelpPage>
    <description>Stores the status and details of the Prepaid Expenses batch Apex jobs.</description>
    <fields>
        <fullName>c2g__ApexJobId__c</fullName>
        <label>Apex Job Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__BatchProcess__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Batch Process</label>
        <referenceTo>c2g__fflib_BatchProcess__c</referenceTo>
        <relationshipLabel>PrepaidExpensesBatch</relationshipLabel>
        <relationshipName>PrepaidExpensesBatch</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__NotificationType__c</fullName>
        <formula>IF(AND(c2g__TotalNumberOfErrors__c=0,c2g__TotalNumberOfAborts__c=0,c2g__TotalNumberOfExternal__c=0),
            &apos;Successful&apos;,
            IF(c2g__TotalNumberOfErrors__c &gt; 0,
            &apos;Failure&apos;,
            IF(c2g__TotalNumberOfAborts__c &gt; 0,
            &apos;Failure&apos;,
            IF( c2g__TotalNumberOfExternal__c &gt; 0,
            &apos;Failure&apos;,
            &apos;&apos;
            )
            )
            )
            )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Notification Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__ProcessCompleted__c</fullName>
        <label>Process Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>c2g__ProcessStarted__c</fullName>
        <label>Process Started</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>c2g__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__TotalNumberOfAborts__c</fullName>
        <label>Total Number of Aborts</label>
        <summaryFilterItems>
            <field>c2g__PrepaidExpensesLog__c.c2g__LogType__c</field>
            <operation>equals</operation>
            <value>Abort</value>
        </summaryFilterItems>
        <summaryForeignKey>c2g__PrepaidExpensesLog__c.c2g__PrepaidExpensesBatch__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__TotalNumberOfErrors__c</fullName>
        <label>Total Number of Errors</label>
        <summaryFilterItems>
            <field>c2g__PrepaidExpensesLog__c.c2g__LogType__c</field>
            <operation>equals</operation>
            <value>Error</value>
        </summaryFilterItems>
        <summaryForeignKey>c2g__PrepaidExpensesLog__c.c2g__PrepaidExpensesBatch__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__TotalNumberOfExternal__c</fullName>
        <label>Total Number of External</label>
        <summaryFilterItems>
            <field>c2g__PrepaidExpensesLog__c.c2g__LogType__c</field>
            <operation>equals</operation>
            <value>External</value>
        </summaryFilterItems>
        <summaryForeignKey>c2g__PrepaidExpensesLog__c.c2g__PrepaidExpensesBatch__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__TotalNumberOfLogs__c</fullName>
        <label>Total Number of Logs</label>
        <summaryForeignKey>c2g__PrepaidExpensesLog__c.c2g__PrepaidExpensesBatch__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Prepaid Expenses Batch</label>
    <listViews>
        <fullName>c2g__All</fullName>
        <columns>NAME</columns>
        <columns>c2g__Status__c</columns>
        <columns>c2g__ProcessStarted__c</columns>
        <columns>c2g__ProcessCompleted__c</columns>
        <columns>c2g__TotalNumberOfErrors__c</columns>
        <columns>c2g__TotalNumberOfLogs__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PE-{000000000}</displayFormat>
        <label>Prepaid Expenses Batch Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prepaid Expenses Batch</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>